--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-
 * {
   box-sizing: border-box;
 }
 
-/* Add CSS Styles Below */
+body {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	color: darkviolet;
+	width: 50%;
+    max-width: 800px;
+    min-width: 480px;
+    margin: 0 auto;
+	background-color: lavenderblush;
+	align-content: center;
+}
+
+  .lastResult {
+    color: white;
+    padding: 3px;
+      }
