--- a/style.css
+++ b/style.css
@@ -7,9 +7,10 @@ body {
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	color: darkviolet;
 	width: 50%;
-    max-width: 800px;
-    min-width: 480px;
-    margin: 0 auto;
+    max-width: 700px;
+    min-width: 200px;
+    margin: 50px;
+	overflow-wrap: break-word;
 	background-color: lavenderblush;
 	align-content: center;
 }
@@ -18,3 +19,5 @@ body {
     color: white;
     padding: 3px;
       }
+
+
